# python-blogger

./: .eslintrc.cjs  .gitignore  README.md  package.json
apps/post-creator/: index.html  package.json  tsconfig.app.json
apps/post-creator/src/: App.tsx  styles.css
apps/post-creator/src-tauri/: Cargo.toml  tauri.conf.json
apps/post-translator/: index.html  package.json  tailwind.config.js
apps/post-translator/src/: App.tsx
apps/post-translator/src-tauri/: Cargo.toml  tauri.conf.json
creator-app/: README.md
creator-app/src/core/: models.py  package_builder.py
creator-app/src/ui/: main_window.py
creator-app/src/utils/: blog_index.py  io.py  logger.py  paths.py  validators.py
distribution-prompt-builder/: README.md
distribution-prompt-builder/src/core/: channel_rules.py  models.py  prompt_generator.py
distribution-prompt-builder/src/profile_kit/: bio_generator.py  bio_loader.py  bio_models.py  bio_storage.py
distribution-prompt-builder/src/ui/: main_window.py
distribution-prompt-builder/src/utils/: clipboard.py  io.py  logger.py  validators.py
mock_creator/: README.md  generate_sample.py
mock_translator/: README.md  generate_sample.py
prompts/: create-content-prompt.md  create-theme-prompt.md  italian-italy-translation-prompt.md  portuguese-br-translation-prompt.md  spanish-spain-translation-prompt.md
schemas/: content_package.schema.json
scripts/: smoke_test.py
translator-app/: README.md  requirements.txt
translator-app/src/core/: package_builder.py
translator-app/src/ui/: main_window.py
translator-app/src/utils/: io.py  paths.py  (+1 more)
(+14 files in other folders)
