[package]
name = "post-creator"
version = "0.1.0"
description = "Desktop app for Perplexity prompt creation"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = ["fs-all", "path-all", "shell-open", "dialog-open", "clipboard-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
