[package]
name = "post-translator"
version = "0.1.0"
description = "Desktop app for localization and admin payload export"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = ["fs-all", "path-all", "shell-open", "dialog-open", "clipboard-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
